--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     ],
     "require": {
         "darvis/lemmings": ">=1.0.0",
-        "darvis/laravel-users": "*",
+        "darvis/manta-laravel-cms": "*",
         "php-flasher/flasher-laravel": "*",
         "php-flasher/flasher-toastr-laravel": "*"
     }
